fix: resolve mobile scroll overlaps by disabling x-axis GSAP animations and clipping overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1031,6 +1031,7 @@ section {
     position: relative;
     width: 100%;
     height: 520px;
+    overflow: hidden;
 }
 
 .collage-img {
